--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple in-memory database",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/eremt/db.js/issues"
   },
-  "homepage": "https://github.com/eremt/db.js#readme"
+  "homepage": "https://github.com/eremt/db.js#readme",
+  "devDependencies": {
+    "jest": "^29.6.4"
+  }
 }
