--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "db.js",
   "version": "0.0.1",
   "description": "Simple in-memory database",
-  "main": "src/index.js",
+  "main": "db.js",
   "scripts": {
     "test": "jest"
   },
